deploy nao ta indo